resolve : merge conflict

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           >
             <div class="rd-navbar-panel justify-content-center">
               <div class="container-fluid gradCol">
-                <div class="navbar-header">
+                <div class="navbar-header justify-content-center">
                   <div class="rd-navbar-brand">
                     <a class="brand" href="index.html">
                       <img src="images/NEXUs.png" alt="" class="logo-nexus" />
@@ -1037,6 +1037,7 @@
               <div class="form-group dropdown-center col-md-4">
                 <select
                   class="form-control btn btn-secondary dropdown-toggle form-input text-left"
+                  style="padding-left: 1.5rem"
                   name="entry.1288768881"
                   required
                 >
@@ -1054,6 +1055,7 @@
               <div class="form-group dropdown-center col-md-4">
                 <select
                   class="form-control btn btn-secondary dropdown-toggle form-input text-left"
+                  style="padding-left: 1.5rem"
                   id="genderSelect"
                   name="entry.1981334274"
                   required
@@ -1076,6 +1078,22 @@
               Submit
             </button>
           </form>
+          <article class="title-classic">
+            <div
+              class="title-classic-text"
+              style="
+                font-size: 10px !important;
+                border: 0 !important;
+                padding-left: 0 !important;
+              "
+            >
+              <p>
+                <span style="color: red !important">*</span>
+                By submitting the form you give us consent to send you updates
+                on the whatsapp
+              </p>
+            </div>
+          </article>
         </div>
       </section>
 
