resolve : merge conflict

--- a/index.html
+++ b/index.html
@@ -240,10 +240,19 @@
           >
             <div class="rd-navbar-panel justify-content-center">
               <div class="container-fluid gradCol">
-                <div class="navbar-header justify-content-center">
+                <div class="row navbar-header justify-content-center">
                   <div class="rd-navbar-brand">
                     <a class="brand" href="index.html">
                       <img src="images/NEXUs.png" alt="" class="logo-nexus" />
+                    </a>
+                  </div>
+                  <div class="rd-navbar-brand">
+                    <a class="brand" href="index.html">
+                      <img
+                        src="images/nvidia3433.jpg"
+                        alt=""
+                        class="logo-nexus"
+                      />
                     </a>
                   </div>
                 </div>
@@ -1013,7 +1022,7 @@
                     required
                   />
                   <label class="form-label" for="contact-phone-2"
-                    >Phone<span style="color: red">*</span></label
+                    >WhatsApp Number<span style="color: red">*</span></label
                   >
                 </div>
               </div>
@@ -1089,8 +1098,8 @@
             >
               <p>
                 <span style="color: red !important">*</span>
-                By submitting the form you give us consent to send you updates
-                on the whatsapp
+                By completing this form, you consent to receiving further
+                communications from Omen via WhatsApp.
               </p>
             </div>
           </article>
