fix : height instructions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
         .banner {
           position: relative;
-          height: 25vh;
+          height: 12vh;
         }
 
         .phoneLogo {
@@ -1213,7 +1213,7 @@
                       class="copyright-year"
                       style="color: white !important"
                     ></span>
-                    <span style="color: white !important">Omen Nexus</span>
+                    <span style="color: white !important">Omen Spark</span>
                   </p>
                 </div>
                 <div class="col-sm-6 col-md-4 text-md-right">
