resolved : merge conflic

--- a/index.html
+++ b/index.html
@@ -684,7 +684,6 @@
       </section> -->
 
       <!-- Meet The Team-->
-
       <section
         id="products"
         class="section section-sm section-fluid bg-default"
@@ -777,14 +776,15 @@
 
           <div>
             <p class="text-muted">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Laboriosam natus necessitatibus mollitia similique exercitationem
-              earum minima maxime corporis perspiciatis, asperiores, molestias
-              ipsa? Odio sint ullam accusantium fuga saepe odit adipisci! Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Molestias
-              molestiae rerum incidunt repellat hic! Enim, voluptatum eos
-              ducimus molestias doloremque, cumque cum nam minima ratione ipsam
-              odit eius repellat magnam?
+              Welcome to Omen Spark, an exhilarating one-month initiative by
+              HP's Omen laptop line. Taking place in four vibrant cities at our
+              Omen Playground stores, Omen Spark features specially curated
+              events for tech enthusiasts, gamers, and aspiring professionals.
+              Experience cutting-edge Omen laptops, participate in thrilling
+              competitions, and explore HP's expertly designed courses to level
+              up your career. Join us to connect with like-minded individuals,
+              learn from industry experts, and elevate your tech and gaming
+              skills. Discover, learn, and excel with Omen Spark!
             </p>
           </div>
         </div>
@@ -1003,8 +1003,8 @@
             </div>
             <div class="title-classic-text">
               <p>
-                If you have any questions, just fill in the contact form, and we
-                will answer you shortly.
+                Please fill the form and a representative will
+                assist you further
               </p>
             </div>
           </article>
