--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/Omen-Spark.png" type="image/x-icon" />
     <!-- Stylesheets-->
     <link
       rel="stylesheet"
@@ -138,12 +138,13 @@
       }
 
       .button-primary.button-pipaluk::before {
-        background: rgb(255, 2, 2);
         color: white;
         background: linear-gradient(
-          324deg,
-          rgba(255, 2, 2, 1) 62%,
-          rgba(255, 50, 178, 1) 82%
+          to bottom right,
+          #f54ea2,
+          #ff4e50,
+          #ff4e50,
+          #ffb300
         );
       }
 
@@ -234,20 +235,22 @@
       }
 
       .gradCol2 {
-        background: rgb(255, 2, 2);
         background: linear-gradient(
-          324deg,
-          rgba(255, 2, 2, 1) 62%,
-          rgba(255, 50, 178, 1) 82%
+          to bottom right,
+          #f54ea2,
+          #ff4e50,
+          #ff4e50,
+          #ffb300
         );
       }
 
       .ui-to-top {
-        background: rgb(255, 2, 2);
         background: linear-gradient(
-          324deg,
-          rgba(255, 2, 2, 1) 62%,
-          rgba(255, 50, 178, 1) 82%
+          to bottom right,
+          #f54ea2,
+          #ff4e50,
+          #ff4e50,
+          #ffb300
         );
         color: white;
         align-items: center;
@@ -308,74 +311,6 @@
     <div class="page">
       <div id="home">
         <header class="section page-header">
-          <!-- <div class="container-fluid banner">
-            <div
-              class="row"
-              style="position: relative; justify-content: space-between"
-            >
-              <div style="background-color: transparent">
-                <img
-                  src="images/lg2.png"
-                  alt=""
-                  width="100"
-                  style="margin-left: 2rem"
-                />
-              </div>
-
-              <div style="background-color: transparent">
-                <img
-                  src="images/lg1.png"
-                  alt=""
-                  width="100"
-                  style="margin-right: 2rem"
-                />
-              </div>
-            </div>
-            <div class="phoneLogo">
-              <img src="images/Omen-Spark.png" alt="" width="100" />
-            </div>
-          </div> -->
-          <!-- <nav
-            class="rd-navbar rd-navbar-classic gradCol"
-            data-layout="rd-navbar-fixed"
-            data-sm-layout="rd-navbar-fixed"
-            data-md-layout="rd-navbar-fixed"
-            data-md-device-layout="rd-navbar-fixed"
-            data-lg-layout="rd-navbar-fixed"
-            data-lg-device-layout="rd-navbar-fixed"
-            data-xl-layout="rd-navbar-static"
-            data-xl-device-layout="rd-navbar-static"
-            data-xxl-layout="rd-navbar-static"
-            data-xxl-device-layout="rd-navbar-static"
-            data-lg-stick-up-offset="46px"
-            data-xl-stick-up-offset="46px"
-            data-xxl-stick-up-offset="46px"
-            data-lg-stick-up="true"
-            data-xl-stick-up="true"
-            data-xxl-stick-up="true"
-          >
-            <div class="rd-navbar-panel justify-content-center">
-              <div class="container-fluid gradCol">
-                <div class="row navbar-header justify-content-center">
-                  <div class="rd-navbar-brand">
-                    <a class="brand" href="index.html">
-                      <img src="images/Omen-Spark.png" alt="" class="logo-nexus" />
-                    </a>
-                  </div>
-                  <div class="rd-navbar-brand">
-                    <a class="brand" href="index.html">
-                      <img
-                        src="images/nvidia3433.jpg"
-                        alt=""
-                        class="logo-nexus"
-                      />
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </nav> -->
-
           <div class="rd-navbar-wrap">
             <nav
               class="rd-navbar rd-navbar-classic"
@@ -443,247 +378,15 @@
           </div>
         </header>
 
-        <!-- Swiper-->
-        <!-- <section
+        <section
           class="section swiper-container swiper-slider swiper-slider-classic"
-          data-loop="true"
-          data-autoplay="4859"
-          data-simulate-touch="true"
-          data-direction="vertical"
-          data-nav="false"
         >
           <div class="swiper-wrapper text-center">
-            <div
-              class="swiper-slide"
-              data-slide-bg="images/slider-1-slide-2-1770x742.jpg"
-            >
-              <div class="swiper-slide-caption section-md">
-                <div class="container">
-                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">
-                    Sample Title
-                  </h1>
-                  <p
-                    class="text-width-large"
-                    data-caption-animate="fadeInRight"
-                    data-caption-delay="100"
-                  >
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Necessitatibus corporis quia temporibus sint nam, enim,
-                    eveniet delectus est dolorum harum minima? Ducimus iste et,
-                    illo quidem nisi libero eius expedita!
-                  </p>
-                  <a
-                    class="button button-primary button-ujarak gradCol"
-                    style="border: 0px !important"
-                    href="#modalCta"
-                    data-toggle="modal"
-                    data-caption-animate="fadeInUp"
-                    data-caption-delay="200"
-                    >Buy Now</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div
-              class="swiper-slide"
-              data-slide-bg="images/slider-1-slide-4-1770x742.jpg"
-            >
-              <div class="swiper-slide-caption section-md">
-                <div class="container">
-                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">
-                    Sample Title
-                  </h1>
-                  <p
-                    class="text-width-large"
-                    data-caption-animate="fadeInRight"
-                    data-caption-delay="100"
-                  >
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Sed impedit nemo accusamus, voluptate adipisci cumque
-                    accusantium laborum dignissimos error vel, laboriosam quis
-                    assumenda saepe ut exercitationem deserunt perspiciatis
-                    voluptas cum.
-                  </p>
-                  <a
-                    class="button button-primary button-ujarak gradCol"
-                    style="border: 0px !important"
-                    href="#modalCta"
-                    data-toggle="modal"
-                    data-caption-animate="fadeInUp"
-                    data-caption-delay="200"
-                    >Buy Now</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div
-              class="swiper-slide"
-              data-slide-bg="images/slider-1-slide-6-1770x742.jpg"
-            >
-              <div class="swiper-slide-caption section-md">
-                <div class="container">
-                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">
-                    Sample Title
-                  </h1>
-                  <p
-                    class="text-width-large"
-                    data-caption-animate="fadeInRight"
-                    data-caption-delay="100"
-                  >
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Earum asperiores iure molestias sed natus distinctio
-                    exercitationem totam commodi tempore nisi a neque maxime
-                    enim, quam dolorum cupiditate maiores dolor magnam?
-                  </p>
-                  <a
-                    class="button button-primary button-ujarak gradCol"
-                    style="border: 0px !important"
-                    href="#modalCta"
-                    data-toggle="modal"
-                    data-caption-animate="fadeInUp"
-                    data-caption-delay="200"
-                    >Buy Now</a
-                  >
-                </div>
-              </div>
-            </div>
+            <img src="./images/Poster.png" alt="" />
           </div>
-          
-          <div class="swiper-pagination__module">
-            <div class="swiper-pagination__fraction">
-              <span class="swiper-pagination__fraction-index">00</span
-              ><span class="swiper-pagination__fraction-divider">/</span
-              ><span class="swiper-pagination__fraction-count">00</span>
-            </div>
-            <div class="swiper-pagination__divider"></div>
-            <div class="swiper-pagination"></div>
-          </div>
-        </section> -->
+        </section>
       </div>
-      <!-- See all services-->
 
-      <!-- Cta-->
-
-      <!-- Years of experience-->
-      <!-- <section class="section section-sm bg-default">
-        <div class="container">
-          <div
-            class="row row-30 row-xl-24 justify-content-center align-items-center align-items-lg-start text-left"
-          >
-            <div class="col-md-6 col-lg-5 col-xl-4 text-center">
-              <a class="text-img" href="#">
-                <div id="particles-js"></div>
-                <span class="counter">10</span></a
-              >
-            </div>
-            <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4">
-              <div class="text-width-extra-small offset-top-lg-24 wow fadeInUp">
-                <h3 class="title-decoration-lines-left">Years of Experience</h3>
-                <p class="text-gray-500">
-                  RatherApp is a team of highly experienced app designers and
-                  developers creating unique software for you.
-                </p>
-                <a class="button button-secondary button-pipaluk" href="#"
-                  >Get in touch</a
-                >
-              </div>
-            </div>
-            <div
-              class="col-sm-10 col-md-8 col-lg-6 col-xl-4 wow fadeInRight"
-              data-wow-delay=".1s"
-            >
-              <div
-                class="row justify-content-center border-2-column offset-top-xl-26"
-              >
-                <div class="col-9 col-sm-6">
-                  <div class="counter-amy">
-                    <div class="counter-amy-number">
-                      <span class="counter">2</span
-                      ><span class="symbol">k</span>
-                    </div>
-                    <h6 class="counter-amy-title">apps developed</h6>
-                  </div>
-                </div>
-                <div class="col-9 col-sm-6">
-                  <div class="counter-amy">
-                    <div class="counter-amy-number">
-                      <span class="counter">40</span>
-                    </div>
-                    <h6 class="counter-amy-title">Consultants</h6>
-                  </div>
-                </div>
-                <div class="col-9 col-sm-6">
-                  <div class="counter-amy">
-                    <div class="counter-amy-number">
-                      <span class="counter">12</span>
-                    </div>
-                    <h6 class="counter-amy-title">Awards won</h6>
-                  </div>
-                </div>
-                <div class="col-9 col-sm-6">
-                  <div class="counter-amy">
-                    <div class="counter-amy-number">
-                      <span class="counter">160</span>
-                    </div>
-                    <h6 class="counter-amy-title">Employees</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-xl-12 align-self-center">
-              <div class="row row-30 justify-content-center">
-                <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft">
-                  <a class="clients-classic" href="#"
-                    ><img
-                      src="images/clients-9-270x117.png"
-                      alt=""
-                      width="270"
-                      height="117"
-                  /></a>
-                </div>
-                <div
-                  class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft"
-                  data-wow-delay=".1s"
-                >
-                  <a class="clients-classic" href="#"
-                    ><img
-                      src="images/clients-10-270x117.png"
-                      alt=""
-                      width="270"
-                      height="117"
-                  /></a>
-                </div>
-                <div
-                  class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft"
-                  data-wow-delay=".2s"
-                >
-                  <a class="clients-classic" href="#"
-                    ><img
-                      src="images/clients-3-270x117.png"
-                      alt=""
-                      width="270"
-                      height="117"
-                  /></a>
-                </div>
-                <div
-                  class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft"
-                  data-wow-delay=".3s"
-                >
-                  <a class="clients-classic" href="#"
-                    ><img
-                      src="images/clients-11-270x117.png"
-                      alt=""
-                      width="270"
-                      height="117"
-                  /></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- Meet The Team-->
       <section
         id="products"
         class="section section-sm section-fluid bg-default"
@@ -697,11 +400,11 @@
               <article class="box-contacts hvcard">
                 <div class="card-body p-4">
                   <img
-                    src="images/prods/prod1.jpg"
+                    src="images/prods/9W1C9PA.jpg"
                     alt=""
                     class="img-fluid d-block mx-auto mb-3"
                   />
-                  <h5><a href="#" class="text-dark">Omen 16</a></h5>
+                  <h5><a href="#" class="text-dark">Omen 9W1C9PA</a></h5>
                   <p class="small text-muted font-italic">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </p>
@@ -715,11 +418,11 @@
               <article class="box-contacts hvcard">
                 <div class="card-body p-4">
                   <img
-                    src="images/prods/prod2.jpg"
+                    src="images/prods/9X649PA.jpg"
                     alt=""
                     class="img-fluid d-block mx-auto mb-3"
                   />
-                  <h5><a href="#" class="text-dark">Omen 16</a></h5>
+                  <h5><a href="#" class="text-dark">Omen 9X649PA</a></h5>
                   <p class="small text-muted font-italic">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </p>
@@ -733,11 +436,11 @@
               <article class="box-contacts hvcard">
                 <div class="card-body p-4">
                   <img
-                    src="images/prods/prod3.jpg"
+                    src="images/prods/A0EH4PA.jpg"
                     alt=""
                     class="img-fluid d-block mx-auto mb-3"
                   />
-                  <h5><a href="#" class="text-dark">Omen 16</a></h5>
+                  <h5><a href="#" class="text-dark">Omen A0EH4PA</a></h5>
                   <p class="small text-muted font-italic">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </p>
@@ -751,11 +454,11 @@
               <article class="box-contacts hvcard">
                 <div class="card-body p-4">
                   <img
-                    src="images/prods/prod1.jpg"
+                    src="images/prods/A17KGPA.jpg"
                     alt=""
                     class="img-fluid d-block mx-auto mb-3"
                   />
-                  <h5><a href="#" class="text-dark">Omen 16</a></h5>
+                  <h5><a href="#" class="text-dark">Omen A17KGPA</a></h5>
                   <p class="small text-muted font-italic">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </p>
@@ -1089,6 +792,22 @@
                 </select>
               </div>
 
+              <div class="col-md-4">
+                <div class="form-wrap">
+                  <input
+                    class="form-input"
+                    id="contact-pincode-2"
+                    type="text"
+                    name="entry.1651907901"
+                    min="1"
+                    required
+                  />
+                  <label class="form-label" for="contact-pincode-2"
+                    >Pincode<span style="color: red">*</span></label
+                  >
+                </div>
+              </div>
+
               <div class="form-group dropdown-center col-md-4">
                 <select
                   class="form-control btn btn-secondary dropdown-toggle form-input text-left"
@@ -1343,6 +1062,7 @@
           var age = $("#contact-age-2").val();
           var city = $("#citySelect").val();
           var occ = $("#occSelect").val();
+          var pin = $("#contact-pincode-2").val();
 
           if (!name) {
             Swal.fire({
@@ -1372,6 +1092,12 @@
             Swal.fire({
               title: "",
               text: "Please select city",
+              icon: "error",
+            });
+          } else if (!pin) {
+            Swal.fire({
+              title: "",
+              text: "Please enter pincode",
               icon: "error",
             });
           } else if (!occ) {
