--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
           height: 51px !important;
           width: 56px !important;
         }
+        .poster {
+          object-fit: contain;
+          margin-top: 5rem;
+          padding: 0.5rem;
+        }
+        .prods {
+          margin-top: -5rem;
+        }
 
         .ui-to-top {
           padding: 0.5rem;
@@ -382,14 +390,14 @@
           class="section swiper-container swiper-slider swiper-slider-classic"
         >
           <div class="swiper-wrapper text-center">
-            <img src="./images/Poster.png" alt="" />
+            <img src="./images/Poster.png" alt="" class="poster" />
           </div>
         </section>
       </div>
 
       <section
         id="products"
-        class="section section-sm section-fluid bg-default"
+        class="section section-sm section-fluid bg-default prods"
       >
         <div class="container-fluid" style="margin-top: 4rem">
           <h2>Products</h2>
