fix : some anchor images are grayed out

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                   class="d-block w-100"
                   src="images/delhi-location2.png"
                   alt="First slide"
+                  style="object-fit: contain"
                 />
               </a>
               <div class="overlay">
@@ -568,14 +569,14 @@
               "
             ></div> -->
               <a
-                href="https://g.co/kgs/h7Zwsd1
+                href="https://g.co/kgs/oi6PPKZ
  
             "
                 target="_blank"
               >
                 <img
                   class="d-block w-100"
-                  src="images/mumbai2.png"
+                  src="images/pune-location.png"
                   alt="Second slide"
                 />
               </a>
@@ -588,12 +589,11 @@
                         style="color: white !important; margin-right: 5px"
                         href="#"
                       ></a
-                      >Mumbai</span
+                      >Pune</span
                     ><br />
                     <small style="font-size: 10px"
-                      >3/4, Ground, Dhun Building, Police Station, Grant Road
-                      East, Shapur Baug, Grant Road, Mumbai, Maharashtra
-                      400007</small
+                      >Omen Playground (HP World), G 1 & 2, Indira Chambers,
+                      1549 B, Ramashram Society, Pune, Maharashtra 411030</small
                     >
                   </p>
                 </div>
